--- a/www/src/styles.css
+++ b/www/src/styles.css
@@ -20,6 +20,12 @@ body {
 .lightPurple {
   color: #BB86FC;
 }
+.red {
+  color: red;
+}
+.green {
+  color: green;
+}
 
 .formWrapper {
   height: 75%;
